--- a/ui/src/view/main.css
+++ b/ui/src/view/main.css
@@ -14,8 +14,31 @@ body {
     --size-3: 8px;
     --size-4: 16px;
     --size-5: 32px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .center {
     justify-content: center;
 }
+
+#app {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.app-root {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
